--- a/app.json
+++ b/app.json
@@ -1,165 +1,55 @@
 {
-      "name": "𝗕𝗥𝗔𝗠𝗛𝗔𝗦𝗧𝗥𝗔",
-      "description": "A Pyrogram Based Spam Bots With Many Cmds Fast And Stable",
-      "logo": "https://te.legra.ph/file/bfd4abee19f36133df12d.jpg",
-      "keywords": [
-        "telegram",
-        "PYROGRAM",
-        "telegram-bot",
-        "SpamX",
-        "RiZoeLX"
-      ],   
-  "repository": "https://github.com/RiZoeLX/SpamX",
-  "website": "https://github.com/RiZoeLX",
-  "success_url": "https://t.me/RiZoeLX",
-  "env": {
-             "API_ID": {
-        "description": "Fill Api ID Take this value from My.telegram.org",
-        "value": "",
-        "required": true
-      },
-      "ALIVE_PIC": {
-        "description": "your alive pic or video",
-        "value": "",
-        "required": false
-      },
-      "API_HASH": {
-        "description": "Fill Api hash Take this value from My.telegram.org",
-        "value": "",
-        "required": true
-      },
-      "CLIENT": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": true
-      },
-      "CLIENT2": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT3": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT4": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT5": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT6": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT7": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT8": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT9": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT10": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT11": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT12": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT13": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT14": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT15": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT16": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT17": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT18": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT19": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },
-      "CLIENT20": {
-        "description": "Pyrogram String Session Or Bot Token",
-        "value": "",
-        "required": false
-      },      
-      "SUDO_USERS": {
-            "description": "Sudo users id space by space or leave blank",
-            "value": "",
-            "required": false
-        },
-      "OWNER_ID": {
-            "description": "Sudo users id space by space",
-            "value": "",
+    "name": "ᶦϻͣ ≛⃝🇼𝔼𝔼𝔻𝕃𝔼𝔸𝔽 𝐁𝐎𝐓",
+    "logo": "https://graph.org/file/6b1e6a6b8b0bb4934689f.jpg",
+    "keywords": ["telegram", "bot", "Altron"],
+    "buildpacks": [{"url": "heroku/python"}],
+    "env": {
+        "SESSION1": {
+            "description": "pyrogram v2.0 string session here",
             "required": true
         },
-      "LOGS_CHANNEL": {
-            "description": "Logs Group ID (Make A Private Group And Add Your All Spam id Their)",
-            "value": "",
+        "SESSION2": {
+            "description": "pyrogram v2.0 string session here",
             "required": false
         },
-      "HNDLR": {
-            "description": "Your Spam Userbot's Command handler",
-            "value": ".",
-            "required": false  
+        "SESSION3": {
+            "description": "pyrogram v2.0 string session here",
+            "required": false
+        },
+        "SESSION4": {
+            "description": "pyrogram v2.0 string session here",
+            "required": false
+        },
+        "SESSION5": {
+            "description": "pyrogram v2.0 string session here",
+            "required": false
+        },
+        "SUDO_USERS": {
+            "description": "Sudo Users ID here",
+            "required": false
+        },
+        "API_ID": {
+            "description": "telegram api id here",
+            "required": true
+        },
+        "API_HASH": {
+            "description": "telegram api hash here",
+            "required": true
+        },
+        "OWNER_ID": {
+            "required": true
+        },
+        "BOT_TOKEN": {
+            "description": "Fill your bot token here",
+            "required": true
+        },
+        "HEROKU_APP_NAME": {
+            "description": "Required when you want to add SUDO_USERS using bot commands.",
+            "required": false
+        },
+        "HEROKU_API_KEY": {
+            "description": "Required when you want to add SUDO_USERS using bot commands.",
+            "required": false
         }
-    },
-    "addons": [
-    {
-      "plan": "heroku-postgresql",
-      "options": {
-        "version": "12"
-      }
     }
-  ],
-    "buildpacks": [
-        {
-          "url": "heroku/python"
-        }
-    ]
-      }
+}
